--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mavame.GitHub.com : My blog">
+    <meta name="description" content="Web Developer Columbus, OH | Matt Van Meter">
 
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="//fonts.googleapis.com/css?family=Titillium+Web:400,700">
 
-    <title>Mavame.GitHub.com</title>
+    <title>Web Developer Columbus, OH | Matt Van Meter</title>
   </head>
 
   <body>
