--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Web Developer Columbus, OH | Matt Van Meter">
-
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="//fonts.googleapis.com/css?family=Titillium+Web:400,700">
 
