replaces broken links

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Web Developer Columbus, OH | Matt Van Meter">
-   
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="//fonts.googleapis.com/css?family=Titillium+Web:400,700">
 
@@ -21,15 +21,14 @@
       <h1 class="site-title">Matt Van Meter</h1>
       <p class="site-lede">Web Developer in Columbus, OH</p>
       <ul class="nav--inline">
-        <!-- <li><a href="#" class="button button--primary">Resume</a></li> -->
-        <li><a href="#">Github</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="http://www.github.com/mavame">Github</a></li>
+        <li><a href="mailto:mvanmeter1@gmail.com">Contact</a></li>
       </ul>
     </div>
   </header>
 
   <section class="wrapper">
-    <div class="container" style="padding-top: 12px">      
+    <div class="container" style="padding-top: 12px">
       <!-- <h2 class="text--center">Current Work</h2> -->
       <p class="lede text--center">Currently working for Zaner-Bloser, Inc. helping them deliver digital products to schools and districts across the nation primarily as a backend developer in Drupal 7.</p>
       <hr>
@@ -41,17 +40,17 @@
           <p class="portfolio-date text--center">June 2013 - January 2014</p>
           <p>Built a custom registration system complete with an administrative backend for scheduling classes</p>
           <p>A 6-month engagement with the company that helped it redefine the services it could offer its customers</p>  
-          <a href="/" class="button button--primary">Visit Website</a>
+          <a href="http://www.lockersoccer.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
       <hr>
       <div class="portfolio">
-        <img src="assets/images/94fifty.png" alt="95Fifty.com Homepage" />
+        <img src="assets/images/94fifty.png" alt="94Fifty.com Homepage" />
         <div class="grid__full text--center">
           <h3 class="portfolio-title">94Fifty</h3>
           <p class="portfolio-date">October 2013 - January 2014</p>
           <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch it expected in time for the holiday shopping season in Apple retail stores nationwide</p>
-          <a href="/" class="button button--primary">Visit Website</a>
+          <a href="http://94fifty.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
     </div>
@@ -59,7 +58,7 @@
   <footer class="wrapper site-footer" role="contentinfo">
       <div class="container">
 
-          <p class="flush">Find me on <a href="/">Linkedin</a></p>
+          <p class="flush">Find me on <a href="https://www.linkedin.com/pub/matt-van-meter/6/512/574">Linkedin</a></p>
           <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me.</a></p>
 
           <p class="social-links">
