adds design attribution

--- a/app/index.html
+++ b/app/index.html
@@ -59,8 +59,9 @@
       <div class="container">
 
           <p class="flush">Find me on <a href="https://www.linkedin.com/pub/matt-van-meter/6/512/574">Linkedin</a></p>
-          <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me.</a></p>
+          <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me</a>.</p>
 
+          <p>Design is by <a href="http://www.josephrussell.co.uk/">Joseph Russell</a> originally designed for <a href="http://www.browsersync.io/">BrowserSync</a>.</p>
           <p class="social-links">
               <a href="https://github.com/mavame">
                   <i class="icon icon-github"></i>
