--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="//fonts.googleapis.com/css?family=Titillium+Web:400,700">
 
@@ -18,17 +19,18 @@
 
   <header class="wrapper site-header">
     <div class="container">
+      <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-      <p class="site-lede">Web Developer in Columbus, OH</p>
-      <ul class="nav--inline">
+      <p class="site-lede">Web Developer <span class="local"><i class="fa fa-map-marker"></i> Columbus, Ohio</span></p>
+<!--       <ul class="nav--inline">
         <li><a href="http://www.github.com/mavame">Github</a></li>
         <li><a href="mailto:mvanmeter1@gmail.com">Contact</a></li>
-      </ul>
+      </ul> -->
     </div>
   </header>
 
   <section class="wrapper">
-    <div class="container" style="padding-top: 12px">
+    <div class="container">
       <!-- <h2 class="text--center">Current Work</h2> -->
       <p class="lede text--center">Currently working for Zaner-Bloser, Inc. helping them deliver digital products to schools and districts across the nation primarily as a backend developer in Drupal 7.</p>
       <hr>
