--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
     <div class="container">
       <hr>
       <!-- <h2 class="text--center">Current Work</h2> -->
+      <p class="site-lede"><span class="red">Zaner-Bloser, Inc.</span> <span class="local"><i class="fa fa-map-marker"></i> Columbus, Ohio</span></p>
       <p class="lede text--center">Currently working for Zaner-Bloser, Inc. helping them deliver digital products to schools and districts across the nation primarily as a backend developer in Drupal 7.</p>
-      <p class="site-lede">Web Developer <span class="local"><i class="fa fa-map-marker"></i> Columbus, Ohio</span></p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
@@ -69,7 +69,7 @@
               <a href="https://github.com/mavame">
                   <i class="icon icon-github"></i>
               </a>
-              <a href="https://twitter.com/mavame">
+              <a href="https://twitter.com/matt_vanmeter">
                   <i class="icon icon-twitter"></i>
               </a>
           </p>
