updates header, tagline and nav

--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,12 @@
     <div class="container">
       <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-<!--       <ul class="nav--inline">
-        <li><a href="http://www.github.com/mavame">Github</a></li>
+      <p class="site-lede">Backend Programmer / Drupal 7 & Node.js</p>
+      <ul class="nav--inline">
+        <li><a href="http://www.github.com/mavame">Blog</a></li>
+        <li><a href="http://www.github.com/mavame">Twitter</a></li>
         <li><a href="mailto:mvanmeter1@gmail.com">Contact</a></li>
-      </ul> -->
+      </ul>
     </div>
   </header>
 
@@ -32,8 +34,9 @@
     <div class="container">
       <hr>
       <!-- <h2 class="text--center">Current Work</h2> -->
-      <p class="site-lede"><span class="red">Zaner-Bloser, Inc.</span> <span class="local"><i class="fa fa-map-marker"></i> Columbus, Ohio</span></p>
-      <p class="lede text--center">Currently working for Zaner-Bloser, Inc. helping them deliver digital products to schools and districts across the nation primarily as a backend developer in Drupal 7.</p>
+      <!-- <p class="site-lede red"><span>Current Work</span></p> -->
+      <p class="small" style="text-align: center">May 2014 / Columbus, Ohio</p>
+      <p class="lede text--center">Currently working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a backend developer delivering products to classrooms across the nation via a custom-built product platform written in Drupal 7.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
