more changes to header

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-      <p class="site-lede">Backend Programmer / Drupal 7 & Node.js</p>
+      <p class="site-lede">Frontend and backend development in Drupal</p>
       <ul class="nav--inline">
         <li><a href="http://www.github.com/mavame">Blog</a></li>
         <li><a href="http://www.github.com/mavame">Twitter</a></li>
@@ -64,10 +64,7 @@
   <footer class="wrapper site-footer" role="contentinfo">
       <div class="container">
 
-          <p class="flush">Find me on <a href="https://www.linkedin.com/pub/matt-van-meter/6/512/574">Linkedin</a></p>
-          <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me</a>.</p>
-
-          <p>Design is by <a href="http://www.josephrussell.co.uk/">Joseph Russell</a> originally designed for <a href="http://www.browsersync.io/">BrowserSync</a>.</p>
+          <!-- <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me</a>.</p> -->
           <p class="social-links">
               <a href="https://github.com/mavame">
                   <i class="icon icon-github"></i>
@@ -76,6 +73,7 @@
                   <i class="icon icon-twitter"></i>
               </a>
           </p>
+          <p class="flush">Find me on <a href="https://www.linkedin.com/pub/matt-van-meter/6/512/574">Linkedin</a>.</p>
       </div>
   </footer>
 
