--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
       <!-- <h2 class="text--center">Current Work</h2> -->
       <!-- <p class="site-lede red"><span>Current Work</span></p> -->
       <p class="small" style="text-align: center">May 2014 / Columbus, Ohio</p>
-      <p class="lede text--center">Currently working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a backend developer delivering products to classrooms across the nation via a custom-built product platform written in Drupal 7.</p>
+      <p class="lede text--center">Currently working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a backend developer delivering products to classrooms across the nation via a custom-built digital platform written in Drupal 7.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
