--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-      <p class="site-lede">Frontend and backend development in Drupal</p>
+      <p class="site-lede">Web Developer - PHP, Drupal, & jQuery</p>
 <!--       <hr>
       <ul class="nav--inline">
         <li><a href="http://www.github.com/mavame">Blog</a></li>
@@ -37,7 +37,7 @@
       <!-- <h2 class="text--center">Current Work</h2> -->
       <!-- <p class="site-lede red"><span>Current Work</span></p> -->
       <p class="small" style="text-align: center">May 2014 / Columbus, Ohio</p>
-      <p class="lede text--center">Currently working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a backend developer delivering products to classrooms across the nation via a custom-built digital platform written in Drupal 7.</p>
+      <p class="lede text--center">Currently working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a developer and manager of software that delivers products to classrooms across the nation written entirely in Drupal 7.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
