adds a technology section

--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
   <section class="wrapper">
     <div class="container">
       <hr>
-      <!-- <h2 class="text--center">Current Work</h2> -->
-      <!-- <p class="site-lede red"><span>Current Work</span></p> -->
       <p class="small" style="text-align: center">May 2014 - Current</p>
       <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> to develop software that delivers digital products to classrooms on multiple devices to students and teachers all across the nation.</p>
+      <hr>
+      <p class="text--center">PHP, Drupal 7, Shopify, Wordpress, JavaScript, jQuery, Node.js, HTML5, CSS3, Linux, Apache, Vagrant</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
