--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-      <p class="site-lede">Software Developer</p>
+      <!-- <p class="site-lede"><strong>Software Developer</strong></p> -->
 <!--       <hr>
       <ul class="nav--inline">
         <li><a href="http://www.github.com/mavame">Blog</a></li>
@@ -33,20 +33,18 @@
 
   <section class="wrapper">
     <div class="container">
+      <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Wordpress, Angular.js, jQuery, Node.js, HTML5, CSS3</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
       <hr>
-      <p class="small" style="text-align: center">May 2014 - Current</p>
-      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> to develop software that delivers digital products to classrooms on multiple devices to students and teachers all across the nation.</p>
-      <hr>
-      <p class="text--center">PHP, Drupal 7, Shopify, Wordpress, JavaScript, jQuery, Node.js, HTML5, CSS3, Linux, Apache, Vagrant</p>
+      <p class="small text--center">May 2014 - Current</p>
+      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products on mobile devices to over 10,000 teachers and students all across the nation.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
         <img src="assets/images/locker-soccer.png" alt="LockerSoccer.com Homepage" />
         <div class="grid__full text--center">
           <h3 class="portfolio-title text--center">Locker Soccer Academy</h3>
-          <p class="portfolio-date text--center">June 2013 - January 2014</p>
-          <p>Built a custom registration system complete with an administrative backend for scheduling classes</p>
-          <p>A 6-month engagement with the company that helped it redefine the services it could offer its customers</p>  
+          <p class="text--center">Drupal Commerce, Web Design</p>
+          <p>A year long engagement with the company that helped it redefine the services it could offer its customers. Built a custom registration system complete with an administrative backend for scheduling classes.</p>  
           <a href="http://www.lockersoccer.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
@@ -55,8 +53,8 @@
         <img src="assets/images/94fifty.png" alt="94Fifty.com Homepage" />
         <div class="grid__full text--center">
           <h3 class="portfolio-title">94Fifty</h3>
-          <p class="portfolio-date">October 2013 - January 2014</p>
-          <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch it expected in time for the holiday shopping season in Apple retail stores nationwide</p>
+          <p class="text--center">Shopify, Drupal 7, Web Design</p>
+          <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch it expected in time for the holiday shopping season in Apple retail stores nationwide.</p>
           <a href="http://94fifty.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
