missed this on last commit

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
   <header class="wrapper site-header">
     <div class="container">
-      <img id="avatar" src="https://lh3.googleusercontent.com/-k09m8n6PM2U/U6oab7rVRDI/AAAAAAAADDk/xBlzcdl2LCU/w280-h280-p/10369037_10201089431718077_7540155091010306446_o.jpg" alt="">
+      <img id="avatar" src="assets/images/mattv.png" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
       <!-- <p class="site-lede"><strong>Software Developer</strong></p> -->
 <!--       <hr>
@@ -36,15 +36,15 @@
       <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Wordpress, Angular.js, jQuery, Node.js, HTML5, CSS3</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
       <hr>
       <p class="small text--center">May 2014 - Current</p>
-      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products on mobile devices to over 10,000 teachers and students all across the nation.</p>
+      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to various devices in hundreds of classrooms all across the nation each and every day.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
         <img src="assets/images/locker-soccer.png" alt="LockerSoccer.com Homepage" />
         <div class="grid__full text--center">
-          <h3 class="portfolio-title text--center">Locker Soccer Academy</h3>
+          <h3 class="portfolio-title text--center">Locker Soccer eCommerce</h3>
           <p class="text--center">Drupal Commerce, Web Design</p>
-          <p>A year long engagement with the company that helped it redefine the services it could offer its customers. Built a custom registration system complete with an administrative backend for scheduling classes.</p>  
+          <p>In 2014 I entered a partnership with a leading local recreational sports academy aimed at children ages 2-12 to help redesign and redefine the experience it could offer its customers online.</p>  
           <a href="http://www.lockersoccer.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
@@ -52,9 +52,9 @@
       <div class="portfolio">
         <img src="assets/images/94fifty.png" alt="94Fifty.com Homepage" />
         <div class="grid__full text--center">
-          <h3 class="portfolio-title">94Fifty</h3>
+          <h3 class="portfolio-title">94Fifty eCommerce</h3>
           <p class="text--center">Shopify, Drupal 7, Web Design</p>
-          <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch it expected in time for the holiday shopping season in Apple retail stores nationwide.</p>
+          <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch in Apple retail stores it expected in the 2013 holiday shopping season.</p>
           <a href="http://94fifty.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
       </div>
