--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
       <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Wordpress, Angular.js, jQuery, Node.js, HTML5, CSS3</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
       <hr>
       <p class="small text--center">May 2014 - Current</p>
-      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to various devices in hundreds of classrooms all across the nation each and every day.</p>
+      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to classrooms on various devices all across the nation each day.</p>
       <hr>
       <h2 class="text--center">Recent Work</h2>
       <div class="portfolio">
