Adds social links

--- a/app/index.html
+++ b/app/index.html
@@ -22,18 +22,23 @@
       <img id="avatar" src="assets/images/mattv.png" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
       <!-- <p class="site-lede"><strong>Software Developer</strong></p> -->
-<!--       <hr>
-      <ul class="nav--inline">
-        <li><a href="http://www.github.com/mavame">Blog</a></li>
-        <li><a href="http://www.github.com/mavame">Twitter</a></li>
-        <li><a href="mailto:mvanmeter1@gmail.com">Contact</a></li>
-      </ul> -->
+      <p class="social-links text--center">
+          <a href="https://twitter.com/matt_vanmeter" target="_blank">
+              <i class="icon icon-twitter"></i>
+          </a>
+          <a href="https://github.com/mavame" target="_blank">
+              <i class="icon icon-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/pub/matt-van-meter/6/512/574" target="_blank">
+              <i class="icon icon-linkedin"></i>
+          </a>
+      </p>
     </div>
   </header>
 
   <section class="wrapper">
     <div class="container">
-      <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Wordpress, Angular.js, jQuery, Node.js, HTML5, CSS3</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
+        <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Wordpress, Angular.js, jQuery, Node.js, HTML5, CSS3</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
       <hr>
       <p class="small text--center">May 2014 - Current</p>
       <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to classrooms on various devices all across the nation each day.</p>
@@ -65,10 +70,10 @@
 
           <!-- <p>To contact me or hire me to make websites <a href="mailto:mvanmeter1@gmail.com">email me</a>.</p> -->
           <p class="social-links">
-              <a href="https://github.com/mavame">
+              <a href="https://github.com/mavame" target="_blank">
                   <i class="icon icon-github"></i>
               </a>
-              <a href="https://twitter.com/matt_vanmeter">
+              <a href="https://twitter.com/matt_vanmeter" target="_blank">
                   <i class="icon icon-twitter"></i>
               </a>
           </p>
