--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <section class="wrapper">
     <div class="container">
-        <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Javascript, Angular.js, jQuery, RWD</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
+        <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Javascript, jQuery, RWD</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
       <hr>
       <p class="small text--center">May 2014 - Current</p>
       <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to classrooms on various devices all across the nation each day.</p>
