--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header class="wrapper site-header">
     <div class="container">
-      <img id="avatar" src="assets/images/mattv.png" alt="">
+      <img id="avatar" src="assets/images/matt-face.jpeg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
       <!-- <p class="site-lede"><strong>Software Developer</strong></p> -->
       <p class="social-links text--center">
