--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="//fonts.googleapis.com/css?family=Titillium+Web:400,700">
 
-    <title>Web Developer Columbus, OH | Matt Van Meter</title>
+    <title>Matt Van Meter | Web Developer in Columbus, OH</title>
   </head>
 
   <body>
@@ -21,7 +21,6 @@
     <div class="container">
       <img id="avatar" src="assets/images/matt-face.jpeg" alt="">
       <h1 class="site-title">Matt Van Meter</h1>
-      <!-- <p class="site-lede"><strong>Software Developer</strong></p> -->
       <p class="social-links text--center">
           <a href="https://twitter.com/matt_vanmeter" target="_blank">
               <i class="icon icon-twitter"></i>
@@ -35,15 +34,25 @@
       </p>
     </div>
   </header>
-
   <section class="wrapper">
     <div class="container">
-        <p class="text--center"><strong>PHP5, Drupal 7, Shopify, Javascript, jQuery, RWD</strong><br>CentOS / Apache / Vagrant / Rackspace Cloud / AWS</p>
+        <p class="text--center"><strong>Wordpress, Drupal, and Shopify</strong><br>Making websites in PHP since 2009</p>
       <hr>
-      <p class="small text--center">May 2014 - Current</p>
-      <p class="lede text--center">Working for <a href="http://www.zaner-bloser.com" target="_blank">Zaner-Bloser, Inc.</a> as a Drupal Developer to help deliver digital products to classrooms on various devices all across the nation each day.</p>
+      <p class="small text--center">Summary</p>
+      <p class="lede text--center" style="padding-left: 20px; padding-right: 20px;">A web developer with experience in PHP web development, responsive web design, content management, and e-commerce. With my experience serving small business clients, I can make any website or blog a reality.</p>
+      <!-- I've been helping <a href="http://highlights.com">Highlights for Children</a> launch it's website that sells over 200 products to parents and children all over the world. The website is responsive, multilingual, integrated with 3rd party ecommerce systems, and able to manage hundreds of products and articles with ease. -->
       <hr>
       <h2 class="text--center">Recent Work</h2>
+      <div class="portfolio">
+        <img src="assets/images/highlights.png" alt="Highlights for Children Homepage" />
+        <div class="grid__full text--center">
+          <h3 class="portfolio-title text--center">Highlights for Children</h3>
+          <p class="text--center">Responsive Web Design and Development</p>
+          <p>Helped to create multiple iterations of the Highlights for Children e-commerce website. The website sell thousands of products each month online, and they needed a modern design to help them stay relevant.</p>  
+          <a href="http://www.highlights.com" class="button button--primary" target="_blank">Visit Website</a>
+        </div>
+      </div>
+      <hr>
       <div class="portfolio">
         <img src="assets/images/locker-soccer.png" alt="LockerSoccer.com Homepage" />
         <div class="grid__full text--center">
@@ -58,7 +67,7 @@
         <img src="assets/images/94fifty.png" alt="94Fifty.com Homepage" />
         <div class="grid__full text--center">
           <h3 class="portfolio-title">94Fifty eCommerce</h3>
-          <p class="text--center">Shopify, Drupal 7, Web Design</p>
+          <p class="text--center">Responsive Web Design, Shopify, and Drupal 7</p>
           <p>Responsive web design and development for a high-tech startup that helped prepare it for the product launch in Apple retail stores it expected in the 2013 holiday shopping season.</p>
           <a href="http://94fifty.com" class="button button--primary" target="_blank">Visit Website</a>
         </div>
