--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
   <section class="wrapper">
     <div class="container">
-        <p class="text--center"><strong>Wordpress, Drupal, and Shopify</strong><br>Making websites in PHP since 2009</p>
+        <p class="text--center"><strong>Web Development / Columbus, Ohio</strong><br>Making websites in PHP since 2009</p>
       <hr>
       <p class="small text--center">Summary</p>
       <p class="lede text--center" style="padding-left: 20px; padding-right: 20px;">A web developer with experience in PHP web development, responsive web design, content management, and e-commerce. With my experience serving small business clients, I can make any website or blog a reality.</p>
